5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1836_2602.log
== SUBMITION (2019-06-25 11:10:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(unv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print( "coli: ",round(x[2],1))
if(x[0]==min(x)):
	print("escafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.18001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 6, in <module>
    x = dot(unv(bact),a)
NameError: name 'unv' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:10:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(unv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print( "coli: ",round(x[2],1))
if(x[0]==min(x)):
	print("escafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:10:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print( "coli: ",round(x[2],1))
if(x[0]==min(x)):
	print("escafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:11:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print( "coli: ",round(x[2],1))
if(x[0]==min(x)):
	print("escafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.903652
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
escafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:11:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print( "coli: ",round(x[2],1))
if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.09815
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Vetor:estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:11:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
a = array(eval(input("Vetor:")))
bact = array ([[2,1,4],[1,2,0],[2,3,2]])
a = a.T
x = dot(inv(bact),a)
print("estafilococo: ",round(x[0],1))
print("salmonela: ",round(x[1],1))
print( "coli: ",round(x[2],1))
if(x[0]==min(x)):
	print("estafilococo")
elif(x[1]==min(x)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.1801
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
